--- a/front_end/app/static/scroll_h.css
+++ b/front_end/app/static/scroll_h.css
@@ -1,32 +1,44 @@
 /* NOTE; specs for #wn in head of demo too */
-div#wn	{ 
+div.wn	{ 
     position:relative; /* scroll area div must be positioned */
-    width:800px; height:150px; /* width and height required. adjust to suit  */
+    width:100%; height:139px; /* width and height required. adjust to suit  */
+    margin-left: auto;
+    margin-right: auto;
     overflow:hidden; /* required! */
 	}
 
 /* styles to display list items horizontally */
-ul#horiz {
+ul.horiz {
+    list-style:none; margin:0; padding:0;
+    white-space:nowrap;
+
+    }
+/*ul#horiz {
+    position:absolute;
     list-style:none; margin:0; padding:0;
     white-space:nowrap;
     }
-ul#horiz li {
+*/
+ul.horiz li {
     display:inline;
     white-space:nowrap;
     }
     
 /* style scrollLinks to suit your taste and layout. */
-div#scrollLinks {
+div.scrollLinks {
+    margin-left: auto;
+    margin-right: auto;
     position:relative;
-    width:180px;
+    width:580px;
     }
-div#scrollLinks .left {
+
+div.scrollLinks .left {
     background-image:url('./images/tri-lft.gif');
     background-repeat:no-repeat;
     width:12px; height:12px; /* specify width and height of your image */
     position:absolute; left:30px;
     }
-div#scrollLinks .right {
+div.scrollLinks .right {
     background-image:url('./images/tri-rt.gif');
     background-repeat:no-repeat;
     width:12px; height:12px; /* specify width and height of your image */
@@ -37,6 +49,6 @@ div#scrollLinks .right {
    opera shows outline movement with scrolling and won't allow none
    set to suit your page design
 */
-div#wn:focus {
+div.wn:focus {
     outline:1px dotted #eee;
     }    
