--- a/front_end/app/templates/index.html
+++ b/front_end/app/templates/index.html
@@ -19,17 +19,11 @@
     <script type="text/javascript">
 
     function init_dw_Scroll() {
-        // arguments: id of scroll area div, id of content div
-        var wndo = new dw_scrollObj('wn', 'lyr1');
-        
-        // args: id, axis
+        var wndo = new dw_scrollObj('wn', 'lyr');
         wndo.buildScrollControls('scrollLinks', 'h');
-        
-        // for mousedown scrolling, add as 3rd argument
-        //wndo.buildScrollControls('scrollLinks', 'h', 'mousedown');
-        // w/o title
-        // args: id, axis, eType, bScrollbar, include title?
-        //wndo.buildScrollControls('scrollLinks', 'h', 'mousedown', false, false);
+
+        var wndo = new dw_scrollObj('wn1', 'lyr1');
+        wndo.buildScrollControls('scrollLinks1', 'h');
     }
 
     // if code supported, link in the style sheet (optional) and call the init function onload
@@ -57,7 +51,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">TrueFitSKinCare</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -71,13 +65,14 @@
 
     <div class="container">
 
-      <div class="starter-template">
+  <!--     <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-      <table class="input" style="border:0px solid white,width: 100%,"><tr>
+      </div> -->
+      <!-- <table class="input" style="border:0px solid white,width: 100%,"><tr>
       <td style="padding: 15px;"><p sytle="font:big"> What do you need tody?</p></td>
-      <td style="padding: 15px;">
+      <td style="padding: 15px;"> -->
+        <h1 class="float">What do you need today ?</h1>
         <form id="category" action="">
         <select id="category">
         <option value="bb-cream-cc-cream">BB && CC cream</option>
@@ -88,63 +83,40 @@
         <option value="facial-toner-skin-toner">Toner</option>
         <option value="moisturizer-skincare">Moisturizer</option>
         </select>
-        </form>
-      </td>
-      </tr></table>
-      <div id="wn"> <!-- scroll area div -->
-        <div id="lyr1"> <!-- layer in scroll area (content div) -->
-          <ul id="horiz">
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-            <li><img src="static/images/861757.jpg"></li>
-          </ul>
-          </div> <!-- end content div (lyr1) -->
-      </div>  <!-- end wn div -->
+        </form><br>
+      <!-- </td>
+      </tr></table> -->
+      <div class="scrollers">
+        <span style="font-size:24px">Face Serum </span>choose your favorite
+        <div class="wn" id="wn"><div id="lyr"><ul class="horiz" id="horiz"></ul></div></div><br>
+        <div class="scrollLinks" id="scrollLinks" style="visibility: visible;">
+          <div id="wn_h_left" class="left"></div>
+          <div id="wn_h_right" class="right"></div>
+        </div><br>
 
+        <span style="font-size:24px">Moisturizer </span>choose your favorite
+        <div class="wn" id="wn1"><div id="lyr1"><ul class="horiz" id="horiz1"></ul></div></div><br>
+        <div class="scrollLinks" id="scrollLinks1" style="visibility: visible;">
+          <div id="wn_h_left" class="left"></div>
+          <div id="wn_h_right" class="right"></div>
+        </div><br>
+      </div>
+      <!-- <div id="wn"><div id="lyr1"><ul id="horiz"></ul></div></div> -->
+<!-- 
       <div id="scrollLinks" style="visibility: visible;">
         <div id="wn_h_left" class="left"></div>
         <div id="wn_h_right" class="right"></div>
-      </div>
+      </div> -->
 
       <br><br><br><br><br>      
       <div id="screenshot_section" style="margin-bottom: 10px">
-        <div class="new_subheader">Screenshots</div>
+        <div class="new_subheader"></div>
         <div class="screenshot_container" id="screenshot_container">
         
 
           <div class="screenshots" id="screens" style="-webkit-transition: all 0s ease 0s; transition: all 0s ease 0s; left: 0px;">
             <!-- pictures go here -->
           </div>
-          <div tabindex="0" class="carousel-side carousel-left" aria-hidden="true" style="-webkit-transition: all 0s ease 0s; transition: all 0s ease 0s; display: none;">
-            <input type="text" tabindex="-1" role="presentation" style="opacity: 0; height: 1px; width: 1px; z-index: -1; overflow: hidden; position: absolute;">
-            <div class="carousel-arrow carousel-arrow-left"></div>
-          </div>
-          <div tabindex="0" class="carousel-side carousel-right" style="-webkit-transition: all 0s ease 0s; transition: all 0s ease 0s;">
-            <input type="text" tabindex="-1" role="presentation" style="opacity: 0; height: 1px; width: 1px; z-index: -1; overflow: hidden; position: absolute;">
-            <div class="carousel-arrow carousel-arrow-right"></div>
-          </div>
-        </div>
-      </div>
-
-      <div class="scrollright" style="float: right; cursor: pointer; margin-bottom: 5px; margin-right: 5px;">RIGHT</div>
-      <div class="scrollleft" style="float: left; cursor: pointer; margin-bottom: 5px; margin-right: 5px;">LEFT</div>
-    </div><!-- /.container -->
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -160,22 +132,36 @@
       filepath = '/Users/xuanzhang/Developer/python/scrapping/sephora/static/'
       window.inload=query_for_cities();
 
+      $( "#category" ).change(function() {
+        alert( "Handler for .change() called." );
+      });
+      
       function query_for_cities() {
-            category = $('#category').val()
             var products = [];
             jQuery.ajax(
               'db_json',
               {success:
                 function(data) {
                   products = data.products;
-                  for (i=0; i < products.length; i++) {//
-                    // if products[i]['category']=='face-serum' {
+                  counter = 0;
+                  for (i=0; i < products.length; i++) {//products.length
+                    if (products[i]['category']=='face-serum') {
                       src = '/static/images/'+products[i]['sku_id'] + '.jpg'
-                      str = '<img id="screen'+ (i+1).toString() + '" src="'+src+'" class="screen2">'
-                        $('.screenshots').append(str);
-                    // }
+                      str = '<li><img class="products_img" id="screen'+ (i+1).toString() + '" src="'+src+'" class="screen2"></li>'
+                      $('#horiz').append(str);
+                      if (counter++==15){break};
+                    }
                   }
-
+                  products = data.products;
+                  counter = 0;
+                  for (i=0; i < products.length; i++) {//products.length
+                    if (products[i]['category']=='moisturizer-skincare') {
+                      src = '/static/images/'+products[i]['sku_id'] + '.jpg'
+                      str = '<li><img class="products_img" id="screen'+ (i+1).toString() + '" src="'+src+'" class="screen2"></li>'
+                      $('#horiz1').append(str);
+                      if (counter++==30){break};
+                    }
+                  }
                 }
               }
             )
