--- a/front_end/app/templates/index.html
+++ b/front_end/app/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>TrueFitSkinCare</title>
 
     <!-- Bootstrap core CSS -->
     <link href="static/dist/css/bootstrap.css" rel="stylesheet">
@@ -16,6 +16,8 @@
     <link href="static/starter-template.css" rel="stylesheet">
     <link href="static/scroll_h.css" rel="stylesheet">
     <script src="static/js/dw_scroll_c.js" type="text/javascript"></script>
+    <script src="mouseover_popup.js" language="JavaScript" type="text/javascript"></script>
+    <script> $(function() {$( document ).tooltip(); }); </script>
     <script type="text/javascript">
 
     function init_dw_Scroll() {
@@ -33,11 +35,13 @@
         wndo.buildScrollControls('scrollLinks5', 'h');
         var wndo = new dw_scrollObj('wn6', 'lyr6');
         wndo.buildScrollControls('scrollLinks6', 'h');
+        var wndo = new dw_scrollObj('wn7', 'lyr7');
+        wndo.buildScrollControls('scrollLinks7', 'h');
     }
 
     // if code supported, link in the style sheet (optional) and call the init function onload
     if ( dw_scrollObj.isSupported() ) {
-        dw_Util.writeStyleSheet('css/scroll_h.css');
+        dw_Util.writeStyleSheet('static/scroll_h.css');
         dw_Event.add( window, 'load', init_dw_Scroll);
     }
 
@@ -50,6 +54,7 @@
   </head>
 
   <body>
+    <div style="display: none; position: absolute; z-index: 110; left: 400; top: 100; width: 15; height: 15" id="preview_div"></div>
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -73,59 +78,117 @@
     </div>
 
     <div class="container">
-
-  <!--     <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div> -->
-      <!-- <table class="input" style="border:0px solid white,width: 100%,"><tr>
-      <td style="padding: 15px;"><p sytle="font:big"> What do you need tody?</p></td>
-      <td style="padding: 15px;"> -->
-        <h1 class="float">What do you need today ?</h1>
-        <form id="category" action="">
-        <select id="category">
-        <option value="bb-cream-cc-cream">BB && CC cream</option>
-        <option value="eye-cream-dark-circles">Eye cream</option>
-        <option value="face-mask">Face mask</option>
-        <option value="face-serum">Face serum</option>
-        <option value="face-wash-facial-cleanser">Face wash</option>
-        <option value="facial-toner-skin-toner">Toner</option>
-        <option value="moisturizer-skincare">Moisturizer</option>
+      <table style="width:100%,boarder"><tr>
+        <td>
+          <h1 class="float">What do you need today ?</h1>
+        </td>
+        <td>
+          <form id="category" action="">
+          <select id="category">
+          <option value="moisturizer-skincare">Moisturizer</option>
+          <option value="bb-cream-cc-cream">BB & CC cream</option>
+          <option value="eye-cream-dark-circles">Eye cream</option>
+          <option value="face-mask">Face mask</option>
+          <option value="face-serum">Face serum</option>
+          <option value="face-wash-facial-cleanser">Face wash</option>
+          <option value="facial-toner-skin-toner">Toner</option>
+          </select>
+          </form>
+        </td>
+        <td><div>
+          <input id="button" type="button" value="Find your true fit" 
+                 onclick="return btntest_onclick()" />
+          <!-- <img src="static/images/lab.gif" -->
+        </div></td>
+      </tr></table>
+        <select name="webmenu" id="webmenu">
+          <option value="calendar" title="http://www.abe.co.nz/edit/image_cache/Hamach_300x60c0.JPG"></option>
+          <option value="shopping_cart" title="http://www.nationaldirectory.com.au/sites/itchnomore/thumbs/screenshot2013-01-23at12.05.50pm_300_60.png"></option>
+          <option value="cd" title="http://www.mitenterpriseforum.co.uk/wp-content/uploads/2013/01/MIT_EF_logo_300x60.jpg"></option>
+          <option value="email"  selected="selected" title="http://annualreport.tacomaartmuseum.org/sites/default/files/L_AnnualReport_300x60.png"></option>
+          <option value="faq" title="http://fleetfootmarketing.com/wp-content/uploads/2013/01/Wichita-Apartment-Video-Tours-CTA60-300x50.png"></option>
+          <option value="games" title="http://krishnapatrika.com/images/300x50/pellipandiri300-50.gif"></option>
         </select>
-        </form><br>
-      <!-- </td>
-      </tr></table> -->
+      
       <div class="scrollers">
-        <!-- <span style="font-size:24px">Face Serum </span>choose your favorite
-        <div class="wn" id="wn"><div id="lyr"><ul class="horiz" id="horiz"></ul></div></div><br>
-        <div class="scrollLinks" id="scrollLinks" style="visibility: visible;">
+        <h2 style="font-size:16pt">Choose your favorite</h2>
+        <span style="font-size:14pt">Moisturizer </span>
+        <div class="wn" id="wn0"><div id="lyr0"><ul class="horiz" id="horiz0"></ul></div></div>
+        <div class="scrollLinks" id="scrollLinks0" style="visibility: visible;">
           <div id="wn_h_left" class="left"></div>
           <div id="wn_h_right" class="right"></div>
-        </div><br>
+        </div>
+        <br>
 
-        <span style="font-size:24px">Moisturizer </span>choose your favorite
-        <div class="wn" id="wn1"><div id="lyr1"><ul class="horiz" id="horiz1"></ul></div></div><br>
+        <span style="font-size:14pt">Eye cream </span>
+        <div class="wn" id="wn1"><div id="lyr1"><ul class="horiz" id="horiz1"></ul></div></div>
         <div class="scrollLinks" id="scrollLinks1" style="visibility: visible;">
           <div id="wn_h_left" class="left"></div>
           <div id="wn_h_right" class="right"></div>
-        </div><br> -->
+        </div>
+        <br>
+
+        <span style="font-size:14pt">Face mask </span>
+        <div class="wn" id="wn2"><div id="lyr2"><ul class="horiz" id="horiz2"></ul></div></div>
+        <div class="scrollLinks" id="scrollLinks2" style="visibility: visible;">
+          <div id="wn_h_left" class="left"></div>
+          <div id="wn_h_right" class="right"></div>
+        </div>
+        <br>
+
+        <span style="font-size:14pt">Face wash </span>
+        <div class="wn" id="wn3"><div id="lyr3"><ul class="horiz" id="horiz3"></ul></div></div>
+        <div class="scrollLinks" id="scrollLinks3" style="visibility: visible;">
+          <div id="wn_h_left" class="left"></div>
+          <div id="wn_h_right" class="right"></div>
+        </div>
+        <br>
+
+        <span style="font-size:14pt">Face toner </span>
+        <div class="wn" id="wn4"><div id="lyr4"><ul class="horiz" id="horiz4"></ul></div></div>
+        <div class="scrollLinks" id="scrollLinks4" style="visibility: visible;">
+          <div id="wn_h_left" class="left"></div>
+          <div id="wn_h_right" class="right"></div>
+        </div>
+        <br>
+
+        <span style="font-size:14pt">Night cream </span>
+        <div class="wn" id="wn5"><div id="lyr5"><ul class="horiz" id="horiz5"></ul></div></div>
+        <div class="scrollLinks" id="scrollLinks5" style="visibility: visible;">
+          <div id="wn_h_left" class="left"></div>
+          <div id="wn_h_right" class="right"></div>
+        </div>
+        <br>
+
+        <span style="font-size:14pt">BB and CC cream </span>
+        <div class="wn" id="wn6"><div id="lyr6"><ul class="horiz" id="horiz6"></ul></div></div>
+        <div class="scrollLinks" id="scrollLinks6" style="visibility: visible;">
+          <div id="wn_h_left" class="left"></div>
+          <div id="wn_h_right" class="right"></div>
+        </div>
+        <br>
+
+        <span style="font-size:14pt">Face Serum </span>
+        <div class="wn" id="wn7"><div id="lyr7"><ul class="horiz" id="horiz7"></ul></div></div>
+        <div class="scrollLinks" id="scrollLinks7" style="visibility: visible;">
+          <div id="wn_h_left" class="left"></div>
+          <div id="wn_h_right" class="right"></div>
+        </div>
+        <br>
+        
       </div>
-      <!-- <div id="wn"><div id="lyr1"><ul id="horiz"></ul></div></div> -->
-<!-- 
-      <div id="scrollLinks" style="visibility: visible;">
-        <div id="wn_h_left" class="left"></div>
-        <div id="wn_h_right" class="right"></div>
-      </div> -->
+
 
       <br><br><br><br><br>      
-      <div id="screenshot_section" style="margin-bottom: 10px">
+<!--       <div id="screenshot_section" style="margin-bottom: 10px">
         <div class="new_subheader"></div>
         <div class="screenshot_container" id="screenshot_container">
-        
-
           <div class="screenshots" id="screens" style="-webkit-transition: all 0s ease 0s; transition: all 0s ease 0s; left: 0px;">
-            <!-- pictures go here -->
+
           </div>
+        </div>
+      </div> -->
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -138,40 +201,45 @@
         console.log(str)
         $('.screenshots').append(str);
       };      
-      filepath = '/Users/xuanzhang/Developer/python/scrapping/sephora/static/'
-      window.inload=query_for_cities();
+      var filepath = '/Users/xuanzhang/Developer/python/scrapping/sephora/static/'
+      // window.onload=query_for_cities();
 
-      $( "#category" ).change(function() {
-        alert( "Handler for .change() called." );
-      });
-      
-      function query_for_cities() {
-            var products = [];
-            jQuery.ajax(
-              'db_json',
-              {success:
-                function(data) {
-                  var categories = ['face-serum','moisturizer-skincare','eye-cream-dark-circles','face-mask','face-wash-facial-cleanser','facial-toner-skin-toner','night-cream','bb-cream-cc-cream'];
-                  for (j=0;j< categories.length;j++){
-                    js = j.toString();
-                    $("#scrollers").append('<span style="font-size:24px">'+ categories[j] +'</span>choose your favorite<div class="wn" id="wn'+js+'"><div id="lyr'+js+'"><ul class="horiz" id="horiz'+js+'"></ul></div></div><br><div class="scrollLinks'+js+'" id="scrollLinks" style="visibility: visible;"><div id="wn_h_left" class="left"></div><div id="wn_h_right" class="right"></div></div><br>');
+      // $( "#category" ).change(function() {
+      //   alert( "Handler for .change() called." );
+      // });
+      function btntest_onclick() {window.location.href = "/results";}
 
-                    products = data.products;
-                    counter = 0;
-                    for (i=0; i < products.length; i++) {//products.length
-                      if (products[i]['category']=='face-serum') {
-                        src = '/static/images/'+products[i]['sku_id'] + '.jpg'
-                        str = '<li><img class="products_img" id="screen'+ (i+1).toString() + '" src="'+src+'" class="screen2"></li>'
-                        $(window['#horiz'+ j.toString()]).append(str);
-                        if (counter++==30){break};
-                      }
-                    }
+      $("#products_img").on("click", function() {
+          $(this).css("boarder", "1px solid red;");
+      })
+
+
+      window.onload=function() {
+        var products = [];
+        jQuery.ajax(
+          'db_json',
+          {success:
+            function(data) {
+              products = data.products;
+              var categories = ['moisturizer-skincare','eye-cream-dark-circles','face-mask','face-wash-facial-cleanser','facial-toner-skin-toner','night-cream','bb-cream-cc-cream','face-serum'];
+              for (j=0;j< 8;j++){                    
+                counter = 0;
+                for (i=0; i < products.length; i++) {//products.length
+                  if (products[i]['category']==categories[j]) {
+                    src = '/static/images/'+products[i]['sku_id'] + '.jpg'
+                    str = '<li><img class="products_img" id="screen'+ (i+1).toString() + '" src="' + src +'" title="' + products[i]['brand'] + ' ' + products[i]['product_name'] +'"></li>'
+                    // $(window['#horiz'+ j.toString()]).append(str);
+                    console.log('#horiz'+j.toString())
+                    $('#horiz'+j.toString()).append(str);
+                    if (counter++==30){break};
                   }
-
                 }
+
               }
-            )
-        }
+            }
+          }
+        )
+      }
     </script>
   </body>
 </html>
