--- a/front_end/app/templates/index.html
+++ b/front_end/app/templates/index.html
@@ -239,33 +239,33 @@
 
 
 
-      // window.onload=function() {
+      window.onload=function() {
 
-      //   var products = [];
-      //   jQuery.ajax(
-      //     'db_json',
-      //     {success:
-      //       function(data) {
-      //         products = data.products;
-      //         var categories = ['moisturizer-skincare','eye-cream-dark-circles','face-mask','face-wash-facial-cleanser','facial-toner-skin-toner','night-cream','bb-cream-cc-cream','face-serum'];
-      //         for (j=0;j< 8;j++){                    
-      //           counter = 0;
-      //           for (i=0; i < products.length; i++) {//products.length
-      //             if (products[i]['category']==categories[j]) {
-      //               src = '/static/images/'+products[i]['sku_id'] + '.jpg'
-      //               str = '<li><img class="products_img" id="screen'+ (i+1).toString() + '" src="' + src +'" title="' + products[i]['brand'] + ' ' + products[i]['product_name'] +'"></li>'
-      //               // $(window['#horiz'+ j.toString()]).append(str);
-      //               console.log('#horiz'+j.toString())
-      //               $('#horiz'+j.toString()).append(str);
-      //               if (counter++==30){break};
-      //             }
-      //           }
+        var products = [];
+        jQuery.ajax(
+          'db_json',
+          {success:
+            function(data) {
+              products = data.products;
+              var categories = ['moisturizer-skincare','eye-cream-dark-circles','face-mask','face-wash-facial-cleanser','facial-toner-skin-toner','night-cream','bb-cream-cc-cream','face-serum'];
+              for (j=0;j< 8;j++){                    
+                counter = 0;
+                for (i=0; i < products.length; i++) {//products.length
+                  if (products[i]['category']==categories[j]) {
+                    src = '/static/images/'+products[i]['sku_id'] + '.jpg'
+                    str = '<li><img class="products_img" id="screen'+ (i+1).toString() + '" src="' + src +'" title="' + products[i]['brand'] + ' ' + products[i]['product_name'] +'"></li>'
+                    // $(window['#horiz'+ j.toString()]).append(str);
+                    console.log('#horiz'+j.toString())
+                    $('#horiz'+j.toString()).append(str);
+                    if (counter++==30){break};
+                  }
+                }
 
-      //         }
-      //       }
-      //     }
-      //   )
-      // }
+              }
+            }
+          }
+        )
+      }
     </script>
   </body>
 </html>
