--- a/front_end/app/templates/results.html
+++ b/front_end/app/templates/results.html
@@ -16,14 +16,6 @@
     <link href="static/starter-template.css" rel="stylesheet">
     <link href="static/scroll_h.css" rel="stylesheet">
     <script src="static/js/dw_scroll_c.js" type="text/javascript"></script>
- <!--   <script src="mouseover_popup.js" language="JavaScript" type="text/javascript"></script>
-    <script> $(function() {$( document ).tooltip(); }); </script>
-  -->
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -52,32 +44,27 @@
 
     <div class="container">
 
-        <table style="width:100%,boarder"><tr>
+        <table style="width:100%,boarder">
+          <!-- <tr> -->
+            <td><h1 class="float">Results goes here</h1></td>
           <td>
-            <h1 class="float">Results goes here</h1>
+            <div>
+              <input id="button" type="button" value="Need something else?" 
+                     onclick="return btntest_onclick()" />
+              <script language="javascript" type="text/javascript">
+                function btntest_onclick() {window.location.href = "/";}
+              </script>
+            </div>
           </td>
-          <td><div>
-            <input id="button" type="button" value="Need something else?" 
-                   onclick="return btntest_onclick()" />
-            <script language="javascript" type="text/javascript">
-            function btntest_onclick() {window.location.href = "/";}
-            </script>
-          </div></td>
-        </tr></table>
-        <table id="resulttable" style="padding:2px, width:50%,margin:auto">
-          <tr><tb>product_id</tb><tb>score</tb></tr>
+          <!-- </tr> -->
         </table>
-      <br><br><br>     
-      <p class="results"></p>
-      <div id="screenshot_section" style="margin-bottom: 10px">
-        <div class="new_subheader"></div>
-        <div class="screenshot_container" id="screenshot_container">
 
-          <div class="screenshots" id="screens" style="-webkit-transition: all 0s ease 0s; transition: all 0s ease 0s; left: 0px;">
-            <!-- pictures go here -->
-          </div>
-        </div>
-      </div>
+        <!-- the result table -->
+        <table id="resulttable" style="padding:2px, width:70%,margin:auto">
+          <tr><td></td><td>Brand</td><td>Product</td><td>Price</td></tr>
+        </table>
+        <br><br><br>     
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -90,13 +77,7 @@
         console.log(str)
         $('.screenshots').append(str);
       };      
-      filepath = '/Users/xuanzhang/Developer/python/scrapping/sephora/static/'
-      // window.onload=query_for_cities();
-
-      // $( "#category" ).change(function() {
-      //   alert( "Handler for .change() called." );
-      // });
-      
+      filepath = '/Users/xuanzhang/Developer/python/scrapping/sephora/static/'      
 
       window.onload=function() {
         var products = [];
@@ -104,23 +85,18 @@
           'result_json',
           {success:
             function(data) {
-              console.log(data)
-
-              $(".results").append(data)
-
-              // scores = data['score'];
-              // $(".results").append(scores)
-              // for (var key in scores){
-              //   $(".resulttable").append("<tr><tb>"+key+"</tb><tb>"+scores(key)+"</tb></tr>")
-              // }
-              // for (i=0; i < scores.length; i++) {//products.length
-              //   src = '/static/images/'+products[i]['sku_id'] + '.jpg'
-              //   str = '<li><img class="products_img" id="screen'+ (i+1).toString() + '" src="' + src +'" title="' + products[i]['brand'] + ' ' + products[i]['product_name'] +'"></li>'
-              //   // $(window['#horiz'+ j.toString()]).append(str);
-              //   console.log('#horiz'+j.toString())
-              //   $('#horiz'+j.toString()).append(str);
-              //   if (counter++==30){break};
-              // }
+              console.log(data);
+              data = data.products;
+              for (i=0; i < data.length; i++) {
+                htmlstr = '<tr>';
+                htmlstr += '<td>' + data[i]['image'] + '</td>';
+                htmlstr += '<td>' + data[i]['brand'] + '</td>';
+                htmlstr += '<td>' + data[i]['product_name'] + '</td>';
+                htmlstr += '<td> $' + data[i]['price'] + '</td>';
+                htmlstr += '</tr>';
+                console.log(htmlstr)
+                $('#resulttable').append(htmlstr);
+              }
             }
           }
         )
