--- a/front_end/app/templates/results.html
+++ b/front_end/app/templates/results.html
@@ -34,8 +34,8 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li class="active"><a href="../../">Home</a></li>
+            <li><a href="#about">lides</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -60,6 +60,7 @@
             <option value="face-serum">Face serum</option>
             <option value="face-wash-facial-cleanser">Face wash</option>
             <option value="facial-toner-skin-toner">Toner</option>
+            <option value="night-cream">Night Cream</option>
             </select>
             </form>
           </td>
