--- a/front_end/app/templates/index.html
+++ b/front_end/app/templates/index.html
@@ -17,8 +17,8 @@
     <link href="static/dd.css" rel="stylesheet" type="text/css" >
     <script src="static/js/jquery-2.1.1.js" type="text/javascript"></script>
     <script src="static/js/jquery.dd.js" type="text/javascript"></script>
-
-
+   
+    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link href="static/styles.css" rel="stylesheet">
     
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -52,37 +52,22 @@
       </div>
     </div>
 
-    <div class="container">
-      <table style="width:100%,boarder"><tr>
-        <td>
-          <h1 class="float">What do you need today ?</h1>
-        </td>
-        <td>
-          <form id="category_form" action="">
-          <select id="category">
-          <option value="moisturizer-skincare">Moisturizer</option>
-          <option value="bb-cream-cc-cream">BB & CC cream</option>
-          <option value="eye-cream-dark-circles">Eye cream</option>
-          <option value="face-mask">Face mask</option>
-          <option value="face-serum">Face serum</option>
-          <option value="face-wash-facial-cleanser">Face wash</option>
-          <option value="facial-toner-skin-toner">Toner</option>
-          </select>
-          </form>
-        </td>
-        <td><div>
-      <!--     <input id="button" type="button" value="Find your true fit" 
-                 onclick="return btntest_onclick()" /> -->
-
-          <button type="button" class="btn btn-primary" onclick="return btntest_onclick()">Find your true fit</button>
-          <button id="test" type="button" class="btn btn-success" onclick="return btntest_onclick()">Alert Select Value</button>
-          <!-- <input id="test" type="button" value="Alert Selected Value" /> -->
-
-          <!-- <img src="static/images/lab.gif" -->
-        </div></td>
-      </tr></table>
     
-     <h3>Choose your favorite</h3>
+    <div class="container">
+      <h2 id="title">What you do you need today?</h2>
+      <select id="category" class="form-control">
+        <option value="moisturizer-skincare">Moisturizer</option>
+        <option value="bb-cream-cc-cream">BB & CC cream</option>
+        <option value="eye-cream-dark-circles">Eye cream</option>
+        <option value="face-mask">Face mask</option>
+        <option value="face-serum">Face serum</option>
+        <option value="face-wash-facial-cleanser">Face wash</option>
+        <option value="facial-toner-skin-toner">Toner</option>
+      </select>
+
+      <button id="submit" type="button" class="btn btn-primary" onclick="return btntest_onclick()">Find your true fit!</button>
+
+      <h3>Choose your favorite</h3>
 
       <div class="divider"></div>
 
@@ -167,7 +152,7 @@
         <h4>Face Serum</h4>
         <select class="main-select" id="horiz7" name="Moisturizer">
       </section>
- 
+  </div><!-- container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -204,7 +189,7 @@
                 for (i=0; i < products.length; i++) {//products.length
                   if (products[i]['category']==categories[j]) {
                     src = '../static/images/'+products[i]['sku_id'] + '.jpg'
-                    str = '<option data-image="' + src +'" data-description="screen'+ (i+1).toString() + '" src="' + src +'" value="' + products[i]['brand'] + ' ' + products[i]['product_name'] +'"></option>'
+                    str = '<option data-image="' + src +'" data-description="' + products[i]['brand'] + ' ' + products[i]['product_name'] +'"></option>'
                     // $(window['#horiz'+ j.toString()]).append(str);
                     console.log('#horiz'+j.toString())
                     $('#horiz'+j.toString()).append(str);
