--- a/front_end/app/static/styles.css
+++ b/front_end/app/static/styles.css
@@ -157,3 +157,54 @@ body {
   background: #FFF;
   text-align: center;
 }
+
+
+/*body {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 300;
+}
+
+b {
+    font-weight: 900;
+}*/
+
+.outline {
+    fill: none;
+    stroke: #888888;
+    stroke-width: 1px;
+}
+
+#tooltip {
+    font-size: 10pt;
+    font-weight: 900;
+
+    fill: #000000;
+    stroke: #ffffff;
+    stroke-width: 0.25px;
+}
+
+.node {
+    stroke: #ffffff;
+    stroke-weight: 1px;
+}
+
+.link {
+    fill: none;
+    stroke: #888888;
+    stroke-weight: 1px;
+    stroke-opacity: 0.5;
+}
+
+.highlight {
+    stroke: red;
+    stroke-weight: 4px;
+    stroke-opacity: 1.0;
+}
+
+
+#slides {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:50px;
+}
