--- a/front_end/app/templates/results.html
+++ b/front_end/app/templates/results.html
@@ -17,8 +17,6 @@
 
     <!-- Custom styles for this template -->
     <link href="../static/starter-template.css" rel="stylesheet">
-    <link href="../static/scroll_h.css" rel="stylesheet">
-    <script src="../static/js/dw_scroll_c.js" type="text/javascript"></script>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link href="../static/styles.css" rel="stylesheet">
   </head>
@@ -39,8 +37,9 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="../../">Home</a></li>
-            <li><a href="#about">Slides</a></li>
+            <li class="active"><a href="#about">Chang Liu</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/slides">Slides</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
